--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -19,23 +19,23 @@
       <section class="filters">
         <div class="locations">
           <h3>States</h3>
-          <h4>ie. New York/Virgina...</h4>
+          <h4>ie. Nairobi/Mombasa...</h4>
           <div class="popover">
-            <h2>New York:</h2>
+            <h2>Nairobi:</h2>
             <ul>
-              <li>Buffalo</li>
-              <li>New York City</li>
+              <li>Bamburi</li>
+              <li>Nairobi</li>
             </ul>
-            <h2>Virginia:</h2>
+            <h2>Diani:</h2>
             <ul>
-              <li>Charlottesville</li>
-              <li>Richmond</li>
+              <li>Malindi</li>
+              <li>Mtwapa</li>
             </ul>
           </div>
 
         </div><div class="amenities">
           <h3>Amenities</h3>
-          <h4>ie. Laundry/Internet...</h4>
+          <h4>ie Laundry/Internet...</h4>
           <ul class="popover">
             <li>Internet</li>
             <li>TV</li>
