--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -18,17 +18,17 @@
       <section class="filters">
         <div class="locations">
           <h3>States</h3>
-          <h4>ie. New York/Virgina...</h4>
+          <h4>ie. Nairobi/Mombasa...</h4>
           <div class="popover">
-            <h2>New York:</h2>
+            <h2>Nairobi:</h2>
             <ul>
-              <li>Buffalo</li>
-              <li>New York City</li>
+              <li>Bamburi</li>
+              <li>Nairobi</li>
             </ul>
-            <h2>Virginia:</h2>
+            <h2>Diani:</h2>
             <ul>
-              <li>Charlottesville</li>
-              <li>Richmond</li>
+              <li>Malindi</li>
+              <li>Mtwapa</li>
             </ul>
           </div>
 
